--- a/index.html
+++ b/index.html
@@ -5,32 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles/styles.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <style> 
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+<div class="container">
+  <div class="main-col">
+      <div class="main-head">Learn to code by watching others</div>
 
-<h1>  Learn to code by watching others</h1>
+      <div class="main-body">
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. 
+      </div>
+  </div>
+  
+  <div class="side-col">
+   <button class="btn btn-try"><span>Try it free 7 days</span> then $20/mo. thereafter</button>
+    <form name="myForm" onsubmit="validateForm();">
+      <input type="text" placeholder="First Name" name="firstName">  
+      <input type="text" placeholder ="Last Name " name="lastName " >
+      <input type="email" placeholder="Email Address" name="emailAddress" >
+      <input type="password" placeholder="Password" name="password" >
+      <button type="submit" class="btn btn-claim">Claim your free trial </button>
+      
+      <div class="tc">
+        By clicking the button, you are agreeing to our <span>Terms and Services</span>
+      </div>
+    </form>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+  
+ 
+  </div>
+  
+</div>
   
   <footer>
     <p class="attribution">
@@ -38,5 +51,15 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+
+  <script>
+    function validateForm() {
+    var x = document.forms["myForm"]["firstName"].value;
+    if (x == "") {
+      document.forms["myForm"]["firstName"].="oops";
+    }
+  }
+  
+  </script> 
 </body>
 </html>
